--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,15 +26,16 @@ section {
 
 header {
   display: flex;
-  background: #111;
   padding: 1rem;
   align-items: center;
   justify-content: center;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.25);
+  z-index: 9;
 }
 
 header h1 {
-  color: white;
-  font-size: calc(16px + 2.5vw);
+  color: #111;
+  font-size: 1rem;
   text-transform: uppercase;
   letter-spacing: 1px;
   margin: 0;
@@ -60,11 +61,15 @@ header h1 .fa {
   transition: all ease 0.2s;
 }
 
-/* @media screen and (max-width: 1600px) {
-  section.heroes {
-    flex-direction: column;
+.fa-spin {
+  animation: fa-spin 1s infinite linear
+}
+
+@media screen and (min-width: 480px) {
+  header h1 {
+    font-size: calc(16px + 2.5vw);
   }
-} */
+}
 
 @keyframes pulse {
   0% {
