--- a/client/src/stylesheets/powerstats.css
+++ b/client/src/stylesheets/powerstats.css
@@ -6,5 +6,6 @@ ul.powerstats {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  padding: 0 0.5rem;
   margin: 0 auto;
 }
