--- a/client/src/stylesheets/hero.css
+++ b/client/src/stylesheets/hero.css
@@ -15,9 +15,45 @@
   transition: all ease 0.2s;
 }
 
+.hero .winner {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0,0,0,0.5);
+  background: rgba(249, 202, 36, 0.8);
+  color: white;
+  font-size: calc(16px + 2vw);
+  font-weight: 700;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 99;
+  transform: translateY(100%);
+  transition: all ease 0.2s;
+}
+
+.hero .winner .fa {
+  margin-bottom: 0.5rem;
+}
+
+.hero.declared .winner {
+  transform: translateY(0);
+  transition: all ease 0.2s;
+}
+
 .hero:nth-of-type(1) {
   flex-direction: row-reverse;
   border-top: none;
+}
+
+.hero:nth-of-type(1) .winner {
+  left: auto;
+  right: 0;
 }
 
 .hero:nth-of-type(1).loading {
