--- a/client/src/stylesheets/hero.css
+++ b/client/src/stylesheets/hero.css
@@ -10,7 +10,38 @@
   transition: all ease 0.2s;
 }
 
+.hero.loading:after {
+  content: "Locating Hero";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: calc(16px + 2vw);
+  font-weight: 700;
+  color: rgba(0,0,0,0.5);
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation-name: pulse;
+  animation-duration: 0.75s;
+  animation-timing-function: ease-out;
+  animation-delay: 0s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-fill-mode: none;
+  animation-play-state: running;
+  transform: translateX(-100%);
+  transition: all ease 0.2s;
+}
+
+.hero:nth-of-type(1).loading:after {
+  transform: translateX(100%);
+}
+
 .hero.loading {
+  overflow: initial;
   transform: translateX(100%);
   transition: all ease 0.2s;
 }
