--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,8 +29,9 @@ header {
   padding: 1rem;
   align-items: center;
   justify-content: center;
+  background: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.25);
-  z-index: 9;
+  z-index: 99;
 }
 
 header h1 {
