--- a/client/src/stylesheets/versusBadge.css
+++ b/client/src/stylesheets/versusBadge.css
@@ -15,10 +15,10 @@
 }
 
 .versus-badge-container.loading {
-  background: #111;
-  color: white;
+  background: white;
+  color: #111;
   border-radius: 100%;
-  box-shadow: 0 0 0 0.5rem white;
+  /* box-shadow: 0 3px 5px rgba(0,0,0,0.25); */
   text-align: center;
   line-height: 80px;
   font-size: calc(16px + 1rem);
@@ -27,12 +27,12 @@
 .versus-badge-front, .versus-badge-back {
   min-width: 80px;
   min-height: 80px;
-  background: #111;
+  background: white;
   border-radius: 100%;
-  box-shadow: 0 0 0 0.5rem white;
+  /* box-shadow: 0 3px 5px rgba(0,0,0,0.25); */
   line-height: 80px;
   text-align: center;
-  color: white;
+  color: #111;
   font-size: calc(16px + 1rem);
   font-weight: 900;
   display: flex;
