--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,5 @@
 html, body {
   height: 100%;
-  overflow: hidden;
   font-family: "Rubik", "Helvetica", sans-serif;
   font-size: 16px;
 }
@@ -67,6 +66,9 @@ header h1 .fa {
 }
 
 @media screen and (min-width: 480px) {
+  html, body {
+    overflow: hidden;
+  }
   header h1 {
     font-size: calc(16px + 2vw);
   }
