--- a/client/src/stylesheets/stat.css
+++ b/client/src/stylesheets/stat.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 700;
   color: white;
   padding: 2px 0;
@@ -34,4 +34,10 @@
 .statValue {
   flex: 1;
   text-align: right;
+}
+
+@media screen and (min-width: 480px) {
+  .stat {
+    font-size: 1rem;
+  }
 }
