--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 html, body {
   height: 100%;
   overflow-y: auto;
-  font-family: "Teko", "Helvetica", sans-serif;
+  font-family: "Roboto Condensed", "Helvetica", sans-serif;
   font-size: 16px;
 }
 
