--- a/client/src/stylesheets/madeBy.css
+++ b/client/src/stylesheets/madeBy.css
@@ -1,21 +1,12 @@
 .made-by {
   position: fixed;
-  top: 1rem;
+  top: 0.65rem;
   left: 1rem;
   z-index: 999;
   color: rgba(0,0,0,0.5);
   text-decoration: none;
   display: flex;
   align-items: center;
-  -webkit-transition: all ease 0.2s;
-  -moz-transition: all ease 0.2s;
-  transition: all ease 0.2s;
-}
-
-.made-by:hover:after {
-  content: "Made By Andrew Brice";
-  margin-left: 0.75rem;
-  opacity: 1;
   -webkit-transition: all ease 0.2s;
   -moz-transition: all ease 0.2s;
   transition: all ease 0.2s;
@@ -46,7 +37,19 @@
 }
 
 @media screen and (min-width: 480px) {
+  .made-by {
+    top: 1rem;
+  }
   .made-by .logo {
     width: 40px;
+  }
+
+  .made-by:hover:after {
+    content: "Made By Andrew Brice";
+    margin-left: 0.75rem;
+    opacity: 1;
+    -webkit-transition: all ease 0.2s;
+    -moz-transition: all ease 0.2s;
+    transition: all ease 0.2s;
   }
 }
